--- a/templates/default.liquid
+++ b/templates/default.liquid
@@ -14,7 +14,7 @@
 		<main>
 			<h1>{{ page.title }}</h1>
 			<article>
-				{{ page.body | not_a_filter }}
+				{{ page.body | raw }}
 			</article>
 		</main>
 	</body>
